# opencv_playground

./: .gitignore  CMakeLists.txt
src/: DisplayImage.cpp  Slider.cpp
